--- a/evcc/config.yaml
+++ b/evcc/config.yaml
@@ -53,3 +53,5 @@ ports_description:
   8887/tcp: "OCPP web socket"
   8899/udp: "Modbus UDP"
   9522/udp: "SMA Speedwire Multicast"
+devices:
+ - /dev/ttyS0
