--- a/evcc/config.yaml
+++ b/evcc/config.yaml
@@ -24,9 +24,11 @@ image: evcc/evcc
 options: 
   config_file: /config/evcc.yaml
   sqlite_file: /data/evcc.db
+  device: /dev/ttyS0
 schema:
   config_file: str
   sqlite_file: str
+  device: "str?"
 host_network: true
 map: 
   - type: addon_config
@@ -53,5 +55,3 @@ ports_description:
   8887/tcp: "OCPP web socket"
   8899/udp: "Modbus UDP"
   9522/udp: "SMA Speedwire Multicast"
-devices:
- - /dev/ttyS0
