--- a/evcc/config.yaml
+++ b/evcc/config.yaml
@@ -1,6 +1,6 @@
 ---
 name: evcc
-version: 0.204.5
+version: 0.204.5-test-hat
 slug: evcc
 description: EV Charge Controller!
 url: https://github.com/evcc-io/evcc
